--- a/aula04/teste.html
+++ b/aula04/teste.html
@@ -30,8 +30,9 @@
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
             // Desenha o objeto
-            ctx.fillStyle = "red";
+            ctx.fillStyle = "blue";
             ctx.fillRect(x, y, 50, 50);
+            
 
             // Atualiza a posição do objeto
             x += vx;
