--- a/aula04/aulajv01.html
+++ b/aula04/aulajv01.html
@@ -3,33 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula de java script</title>
+    <title>Modulo A</title>
     <style>
         body{
-            background-color: #3d2ca0;
+            background-color: rgb(133, 133, 247);
             color: white;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 20px;
+      
         }
 
-        h1{
-            background-color: yellow;
-            border-radius: 10px;
-            padding: 10px;
-            margin: 10px;
-            color: blue;
-            box-shadow: 2px 2px 4px black;
-
+        p{
+            font-size: 20px;
+            text-align: center;
+            background-color: black;
+            color: white;
+            border-radius: 20px;
         }
     </style>
 </head>
 <body>
     <h1>Olá, mundo</h1>
-    <p>Já me livrei da maldicao</p>
-    <script>
-        window.alert('Minha primeira mensagem')
-        window.confirm('Esta gostando de JV')
-        window.prompt('Qual o seu nome')
+    <p>
+        Estamos iniciando os estudos em javascript
+        para criar paginas web com interatividade
+
+    </p>
+
+    <script> 
+    window.alert('Minha primeira mensagem');
+    /*Serve como um alerta*/
+    window.confirm('Esta gostando de javascript ?')
+    /*Serve como uma perguta, ou da o OK ou CANCELA*/
+    window.prompt('Qual o seu nome ?')
+    /*Serve como uma caixa de pergunta*/
+
     </script>
 </body>
 </html> 
